kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: asphones
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: amandevops8080/backend-asphones
          imagePullSecrets:
            - name: regcred
          ports:
            - containerPort: 7071
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: asphones
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 7071
      targetPort: 7071
      protocol: TCP
      nodePort: 31100
