kubernetes/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: asphones 
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: amandevops8080/asphones-frontend:latest
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service 
metadata:
  name: frontend-service
  namespace: asphones 
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
      nodePort: 32000
