kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: asphones
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: 65.2.10.18.nip.io  
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-service  
                port:
                  number: 7071
